20241111 OF分割とPIR登録 bug 修改

--- a/pp-s4apps01/ofpartition/webapp/view/OFPartition.view.xml
+++ b/pp-s4apps01/ofpartition/webapp/view/OFPartition.view.xml
@@ -50,6 +50,13 @@
                                 index="1"
                             />
                             <smartFilterBar:ControlConfiguration
+                                key="MaterialByCustomer"
+                                visibleInAdvancedArea="true"
+                                label="{i18n>MaterialByCustomer}"
+                                mandatory="notMandatory"
+                                index="2"
+                            />
+                            <smartFilterBar:ControlConfiguration
                                 key="Plant"
                                 visibleInAdvancedArea="true"
                                 label="{i18n>Plant}"
