PP-011 OFとSO比較照会

--- a/pp-s4apps01/ofsocomparison/webapp/view/Main.view.xml
+++ b/pp-s4apps01/ofsocomparison/webapp/view/Main.view.xml
@@ -122,6 +122,7 @@
                     <OverflowToolbar style="Clear">
                         <Title text="{i18n>Results}"/>
                         <ToolbarSpacer></ToolbarSpacer>
+                        <Button icon="sap-icon://excel-attachment" press="onDataExport" />
                     </OverflowToolbar>
                 </table:extension>
             </table:Table>
