20241113 PP-024 生産計画立案プラットフォーム

--- a/pp-s4apps01/productionplan/webapp/css/style.css
+++ b/pp-s4apps01/productionplan/webapp/css/style.css
@@ -6,14 +6,21 @@
 .redCell {
     background-color: red !important;
     color: white;
+    will-change: transform;
 }
 
 .greenCell {
     background-color: #66FF33 !important;
     color: white;
+    will-change: transform;
 }
 
 .yellowCell {
     background-color: yellow !important;
     color: white;
+    will-change: transform;
+}
+
+.whiteCell {
+    background-color: white !important;
 }
