--- a/pp-s4apps01/zinventoryrequirement/webapp/view/Main.view.xml
+++ b/pp-s4apps01/zinventoryrequirement/webapp/view/Main.view.xml
@@ -30,7 +30,7 @@
                                 <smartFilterBar:ControlConfiguration index='90' key="SupplierMaterialNumber" visibleInAdvancedArea="true" label="{i18n>SupplierMaterialNumber}"/>
                                 <smartFilterBar:ControlConfiguration index='100' key="DisplayUnit" visibleInAdvancedArea="true" label="{i18n>DisplayUnit}">
                                     <smartFilterBar:customControl>
-                                        <Select forceSelection="true" selectedKey="{local>/filter/DisplayUnit}">
+                                        <Select change="removeAllColumns" forceSelection="true" selectedKey="{local>/filter/DisplayUnit}">
                                             <core:Item key="D" text="{i18n>UnitDay}"/>
                                             <core:Item key="W" text="{i18n>UnitWeek}"/>
                                             <core:Item key="M" text="{i18n>UnitMonth}"/>
@@ -40,7 +40,7 @@
                                 <smartFilterBar:ControlConfiguration index='110' key="PeriodEndDate" visibleInAdvancedArea="true" label="{i18n>PeriodEndDate}"/>
                                 <smartFilterBar:ControlConfiguration index='120' key="DisplayDimension" visibleInAdvancedArea="true" label="{i18n>DisplayDimension}">
                                     <smartFilterBar:customControl>
-                                        <Select forceSelection="true" selectedKey="{local>/filter/DisplayDimension}">
+                                        <Select change="removeAllColumns" forceSelection="true" selectedKey="{local>/filter/DisplayDimension}">
                                             <core:Item key="H" text="{i18n>Horizontal}"/>
                                             <core:Item key="V" text="{i18n>Vertical}"/>
                                         </Select>
@@ -48,14 +48,14 @@
                                 </smartFilterBar:ControlConfiguration>
                                 <smartFilterBar:ControlConfiguration index='130' key="SelectionRule" mandatory="mandatory" visibleInAdvancedArea="true" label="{i18n>SelectionRule}">
                                     <smartFilterBar:customControl>
-                                        <Select items="{ path: '/ZC_TBC1001', filters : { path: 'ZID', operator: 'EQ', value1: 'ZPP018' }, sorter:{ path: 'Zvalue1' } }" forceSelection="true" selectedKey="{local>/filter/SelectionRule}" showSecondaryValues="true" columnRatio="1:3">
+                                        <Select change="removeAllColumns" items="{ path: '/ZC_TBC1001', filters : { path: 'ZID', operator: 'EQ', value1: 'ZPP018' }, sorter:{ path: 'Zvalue1' } }" forceSelection="true" selectedKey="{local>/filter/SelectionRule}" showSecondaryValues="true" columnRatio="1:3">
                                             <core:ListItem key="{Zvalue1}" text="{Zvalue1}" additionalText="{Zvalue2}"/>
                                         </Select>
                                     </smartFilterBar:customControl>
                                 </smartFilterBar:ControlConfiguration>
                                 <smartFilterBar:ControlConfiguration index='140' key="ShowInformation" visibleInAdvancedArea="true" label="{i18n>ShowInformation}">
                                     <smartFilterBar:customControl>
-                                        <Select forceSelection="true" selectedKey="{local>/filter/ShowInformation}">
+                                        <Select change="removeAllColumns" forceSelection="true" selectedKey="{local>/filter/ShowInformation}">
                                             <core:Item key="X" text="{i18n>Yes}"/>
                                             <core:Item key="" text="{i18n>No}"/>
                                         </Select>
@@ -63,7 +63,7 @@
                                 </smartFilterBar:ControlConfiguration>
                                 <smartFilterBar:ControlConfiguration index='150' key="ShowDetailLines" visibleInAdvancedArea="true" label="{i18n>ShowDetailLines}">
                                     <smartFilterBar:customControl>
-                                        <Select forceSelection="true" selectedKey="{local>/filter/ShowDetailLines}">
+                                        <Select change="removeAllColumns" forceSelection="true" selectedKey="{local>/filter/ShowDetailLines}">
                                             <core:Item key="X" text="{i18n>Yes}"/>
                                             <core:Item key="" text="{i18n>No}"/>
                                         </Select>
@@ -71,7 +71,7 @@
                                 </smartFilterBar:ControlConfiguration>
                                 <smartFilterBar:ControlConfiguration index='160' key="ShowDEMAND" visibleInAdvancedArea="true" label="{i18n>ShowDEMAND}">
                                     <smartFilterBar:customControl>
-                                        <Select forceSelection="true" selectedKey="{local>/filter/ShowDEMAND}">
+                                        <Select change="removeAllColumns" forceSelection="true" selectedKey="{local>/filter/ShowDEMAND}">
                                             <core:Item key="X" text="{i18n>Yes}"/>
                                             <core:Item key="" text="{i18n>No}"/>
                                         </Select>
@@ -88,7 +88,7 @@
         </f:header>
         <f:content>
             <!-- <FlexBox fitContainer="true"> -->
-                <core:Fragment fragmentName="pp.zinventoryrequirement.fragments.List" type="XML"/>
+            <core:Fragment fragmentName="pp.zinventoryrequirement.fragments.List" type="XML"/>
             <!-- </FlexBox> -->
         </f:content>
     </f:DynamicPage>
