20241113 OF分割とPIR登録 bug修改

--- a/pp-s4apps01/ofpartition/webapp/view/OFPartition.view.xml
+++ b/pp-s4apps01/ofpartition/webapp/view/OFPartition.view.xml
@@ -97,6 +97,7 @@
                 rows="{local>/OFPartition}"
                 selectionMode="Multi"
                 class="sapUiSizeCompact"
+                rowsUpdated="onRowsUpdated"
             >
                 <t:rowMode>
                     <rm:Auto id="idAuto" />
