20241113 購買申請登録とファイル添付 bug修改

--- a/mm-s4apps01/uploadpurchasereq/webapp/view/Change.view.xml
+++ b/mm-s4apps01/uploadpurchasereq/webapp/view/Change.view.xml
@@ -339,6 +339,30 @@
                                             value="{CreatedAt}"
                                         />
                                     </smartForm:GroupElement>
+                                    <smartForm:GroupElement>
+                                        <smartField:SmartField
+                                            textLabel="{i18n>ApplyDepart}"
+                                            value="{ApplyDepart}"
+                                        />
+                                    </smartForm:GroupElement>
+                                    <smartForm:GroupElement>
+                                        <smartField:SmartField
+                                            textLabel="{i18n>IsApprove}"
+                                            value="{IsApprove}"
+                                        />
+                                    </smartForm:GroupElement>
+                                    <smartForm:GroupElement>
+                                        <smartField:SmartField
+                                            textLabel="{i18n>SupplierMat}"
+                                            value="{SupplierMat}"
+                                        />
+                                    </smartForm:GroupElement>
+                                    <smartForm:GroupElement>
+                                        <smartField:SmartField
+                                            textLabel="{i18n>PolinkBy}"
+                                            value="{PolinkBy}"
+                                        />
+                                    </smartForm:GroupElement>
                                 </smartForm:Group>
                             </smartForm:SmartForm>
                         </xuap:ObjectPageSubSection>
